alignment and arrangement issues sorted

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .cable_size_field {
 	display: flex;
 	flex-wrap: wrap;
-	margin-bottom: 36px;
+	margin-bottom: 10px;
 	overflow: hidden;
 	justify-content: center;
 }
@@ -44,6 +44,7 @@
 input.result:focus {
     outline-width: 0;
 }
+
 
 footer {
 	text-align: center;
